Agregue la segunda parte

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <header>
       <h1>Juegos</h1>
     </header>
-    
+
     <main>
-        <div class ="container-juegos">
-            <h2>Los más vendidos</h2>
-            <div class ="juego-1">
-                <h4>Mario Kart™ 8 Deluxe</h4>
-                <img src="/public/img/mario-kart-8-deluxe.jpg" alt="imagen-juego1">
+      <div class="container-juegos">
+        <h2>Los más vendidos</h2>
+
+        <div class="juego-1">
+          <h4>Mario Kart™ 8 Deluxe</h4>
+          <img src="/public/img/mario-kart-8-deluxe.jpg" alt="imagen-juego1" />
           <p>
             ¡Calienta motores en la versión definitiva de Mario Kart™ 8 y juega
             donde y cuando quieras!
@@ -29,19 +30,22 @@
             1080p en partidas de hasta 4 jugadores en el modo televisor. Todos
             los circuitos de la versión de Wii U, incluyendo el contenido
             descargable, están disponibles.
-        </p>
-        <p>
+          </p>
+          <p>
             Además, ¡los inklings aparecen como personajes invitados junto con
             otro personajes de juegos anteriores, como el Rey Bú, Huesitos y
             Bowser Jr!
-        </p>
-        <div class="div-boton">
-            <button class="boton-comprar" >Comprar!</button>
+          </p>
+          <div class="div-boton">
+            <button class="boton-comprar">
+              <a href="/views/more-info-mario.html">Comprar!</a>
+            </button>
+          </div>
         </div>
-    </div>
-        <div class ="juego-2">
+
+        <div class="juego-2">
           <h4>Mortal Kombat 11</h4>
-          <img src="/public/img/mortal-kombat-11.jpg" alt="imagen-juego2">
+          <img src="/public/img/mortal-kombat-11.jpg" alt="imagen-juego2" />
           <p>
             Mortal Kombat 11, la más reciente entrega de la aclamada franquicia,
             te ofrece una experiencia más profunda y personalizada que nunca.
@@ -62,9 +66,12 @@
             Kombat 11 de muchas otras maneras.
           </p>
           <div class="div-boton">
-              <button class="boton-comprar" >Comprar!</button>
+            <button class="boton-comprar">
+              <a href="/views/more-info-mortal-kombat.html">Comprar!</a>
+            </button>
           </div>
         </div>
+        
       </div>
     </main>
 
